--- a/templates/mappingEdit.hbs
+++ b/templates/mappingEdit.hbs
@@ -1,13 +1,13 @@
 <form id="sheet-export-mappingedit">
 
     <header id="sheet-export-mappingedit-header">
-        <button id="sheet-export-mappingedit-pc" name="PC" {{#if disabledPc}}disabled="true"{{/if}}>PC</button>
-        <button id="sheet-export-mappingedit-npc"{{#if disabledNpc}}disabled="true"{{/if}}>NPC</button>
+        <button id="sheet-export-mappingedit-pc" type="button" name="PC" {{#if disabledPc}}disabled="true"{{/if}}>PC</button>
+        <button id="sheet-export-mappingedit-npc" type="button" {{#if disabledNpc}}disabled="true"{{/if}}>NPC</button>
     </header>
 
     <ul id="fieldList"></ul>
 
-    <button id="sheet-export-mappingedit-save">
+    <button id="sheet-export-mappingedit-save" name="save">
         <i class="fas fa-floppy-o"></i>
     </button>
 
