--- a/templates/customMapping.hbs
+++ b/templates/customMapping.hbs
@@ -1,13 +1,13 @@
 <form id="sheet-export-customMapping">
 
     <header id="sheet-export-customMapping-header">
-        <label for="sheet-export-customMapping-upload-player-json" class="btn">Add player.json mapping file</label>
+        <label for="sheet-export-customMapping-upload-player-json" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-player-json' }}</label>
+        <label for="sheet-export-customMapping-upload-player-pdf" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-player-pdf' }}</label>
+        <label for="sheet-export-customMapping-upload-npc-json" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-npc-json' }}</label>
+        <label for="sheet-export-customMapping-upload-npc-pdf" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-npc-pdf' }}</label>
         <input id="sheet-export-customMapping-upload-player-json" type="file" name="player-json" accept="application/json" style="visibility:hidden;" />
-        <label for="sheet-export-customMapping-upload-player-pdf" class="btn">Add player PDF file</label>
         <input id="sheet-export-customMapping-upload-player-pdf" type="file" name="player-pdf" accept="application/pdf" style="visibility:hidden;" />
-        <label for="sheet-export-customMapping-upload-npc-json" class="btn">Add npc.json mapping file</label>
         <input id="sheet-export-customMapping-upload-npc-json" type="file" name="npc-json" accept="application/json" style="visibility:hidden;" />
-        <label for="sheet-export-customMapping-upload-npc-pdf" class="btn">Add npc PDF file</label>
         <input id="sheet-export-customMapping-upload-npc-pdf" type="file" name="npc-pdf" accept="application/pdf" style="visibility:hidden;" />
     </header>
 
