feature: removed old management of settings, cleaned up old files

--- a/templates/customMapping.hbs
+++ b/templates/customMapping.hbs
@@ -1,13 +1,13 @@
 <form id="sheet-export-customMapping">
 
     <header id="sheet-export-customMapping-header">
-        <label for="sheet-export-customMapping-upload-player-json" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-player-json' }}</label>
+        <label for="sheet-export-customMapping-upload-player-js" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-player-js' }}</label>
         <label for="sheet-export-customMapping-upload-player-pdf" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-player-pdf' }}</label>
-        <label for="sheet-export-customMapping-upload-npc-json" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-npc-json' }}</label>
+        <label for="sheet-export-customMapping-upload-npc-js" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-npc-js' }}</label>
         <label for="sheet-export-customMapping-upload-npc-pdf" class="sheet-export-btn">{{ localize 'sheet-export.customMapping.upload-npc-pdf' }}</label>
-        <input id="sheet-export-customMapping-upload-player-json" type="file" name="player-json" accept="application/json" style="visibility:hidden;" />
+        <input id="sheet-export-customMapping-upload-player-js" type="file" name="player-js" accept="text/javascript" style="visibility:hidden;" />
         <input id="sheet-export-customMapping-upload-player-pdf" type="file" name="player-pdf" accept="application/pdf" style="visibility:hidden;" />
-        <input id="sheet-export-customMapping-upload-npc-json" type="file" name="npc-json" accept="application/json" style="visibility:hidden;" />
+        <input id="sheet-export-customMapping-upload-npc-js" type="file" name="npc-js" accept="text/javascript" style="visibility:hidden;" />
         <input id="sheet-export-customMapping-upload-npc-pdf" type="file" name="npc-pdf" accept="application/pdf" style="visibility:hidden;" />
     </header>
 
